<?xml version="1.0" encoding="utf-8"?>
<resources>
      <string name="get_more">正在加载</string>
    <string name="skip">跳过</string>
    <string name="get_verify">获取验证码</string>
    
    <string name="detail_title">详情</string>
    <string name="detail_comment">评论</string>
    <string name="person_name">lebron</string>
    <string name="app_name">录取吧</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="hot">热门</string>
    <string name="newest">最新</string>
    
    <string name="cream">精华</string>
    <string name="more">• • •</string>
    <string name="blog">社 区</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="locating">正在定位...</string>
    <string name="major_chooser">专业设置</string>
    <string name="shool_introduce">学校简介</string>
    <string name="pretty_girl">校花</string>
    <string name="pretty_boy">校草</string>
    <string name="exist_login">退出登录</string>
    <string name="my_username">我的账号</string>
    <string name="my_collection">我的收藏</string>
    <string name="set_up">我的设置</string>
    <string name="collection">我的收藏</string>
    <string name="give_mark">评分支持</string>
    <string name="attention">关注我们</string>
    <string name="feedback">意见反馈</string>
    <string name="question">常见问题</string>
    <string name="our_blog">录取吧</string>
    <string name="about">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="use_detail">使用条款与隐私政策</string>
    <string name="share_friend">推荐给好友</string>
    <string name="about_software">关于软件</string>
    <string name="login">登录</string>
    <string name="verify">验证码</string>
    <string name="setting_password">设置密码</string>
    <string name="repid_password">确认密码</string>
    <string name="regist">注册</string>
    <string name="agreement">用户协议</string>
      <string name="agreement_xieyi">《使用条款与隐私政策》</string>
    
    <string name="agree_str">点击上面的\"注册\"按钮,即表示您已查看同意</string>
    
    <string name="homologous_major">对应专业</string>
    <string name="about_us_one">武汉简之易科技公司是由4位拥有共同理想的年青人创立，公司主要经营计算机软硬件开发及销售，电子产品开发及销售，网络技术服务和电子商务。我们用“创造价值”的理念为用户打造简洁而易用的产品。我们希望用惊艳的设计和人性化的功能解决用户遇到的问题。\n</string>
    <string name="about_us_two">“录取吧”是公司开发的一款APP,其主要功能是帮助考生便捷的，科学的填报高考志愿，并且为高中生提供健康有趣的生活方式。我们希望用“录取吧”让每一个高中生都能选择最合适自己的学校和专业，让他们在繁忙的学习过程中能保持愉悦的心情和高昂的斗志，迎接高考，迎接挑战，成就人生的梦想。</string>
    <string name="title_activity_test">Test</string>
    
</resources>
