<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/main_color"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- style="@style/style_top_base" -->

        <LinearLayout
            android:id="@+id/top_back"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/title_top_image"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:enabled="false"
                android:layout_height="20dp"
                android:src="@drawable/new_wish_back" />

        </LinearLayout>

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:gravity="center"
            android:text="设置"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20.66dp"
        android:background="#fff4f4f4"/>
    <RelativeLayout
        android:id="@+id/person_account_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:text="@string/give_mark" />

        <ImageView style="@style/image_button_forward" />
    </RelativeLayout>

    <View style="@style/under_line" />

    <RelativeLayout
        android:id="@+id/person_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:text="@string/feedback" />

        <ImageView style="@style/image_button_forward" />
    </RelativeLayout>

    <View style="@style/under_line" />

    <RelativeLayout
        android:id="@+id/person_question"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:text="@string/question" />

        <ImageView style="@style/image_button_forward" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20.66dp"
        android:background="#fff4f4f4"/>

    <RelativeLayout
        android:id="@+id/person_about"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:text="@string/about_software" />

        <ImageView style="@style/image_button_forward" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20.66dp"
        android:background="#fff4f4f4"/>

    <RelativeLayout
        android:id="@+id/share_friend"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:text="@string/share_friend" />
        <ImageView style="@style/image_button_forward" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#fff4f4f4"/>

</LinearLayout>