<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/main_color"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- style="@style/style_top_base" -->

        <LinearLayout
            android:id="@+id/top_back"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/title_top_image"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/new_wish_back" />

        </LinearLayout>

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:gravity="center"
            android:text="关于软件"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20.66dp"
        android:background="#fff4f4f4"/>
    <RelativeLayout
        android:id="@+id/check_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:text="@string/check_update" />
        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="当前版本：1.0.0"
            android:textSize="14dp"
            android:textColor="#e9686767"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_d"
        android:layout_marginLeft="14.66dp" />

    <LinearLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:text="@string/clear_cache" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_d"
        android:layout_marginLeft="14.66dp" />
    <LinearLayout
        android:id="@+id/use_detail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:text="@string/use_detail" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_d"
        android:layout_marginLeft="14.66dp" />

    <LinearLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/personal_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:text="@string/about" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#fff4f4f4"/>

</LinearLayout>